namespace Fudge {
  export namespace SketchTypes {
    export class Sketch {
      objects: SketchObject[];
    }
  }
}