namespace FUDGE {
  export interface UIElement {
    name: string;
    hover: string;
    help: string;
    extendedHelp: string;
  }
}